# provnote

./: .dockerignore  .env.example  .gitignore  .tagpr  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.ja.md  README.md  SECURITY.md  docker-compose.standalone.yml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.server.json  update.sh  vercel.json  vite.config.ts
.githooks/: post-commit
.github/workflows/: deploy.yml  tagpr.yml  tauri-build.yml  test.yml
api/: [[...route]].ts
app/: index.html
docker/: init-db.sh  litellm_config.yaml  nginx.conf
docs/: ARCHITECTURE.md  CONCEPT.ja.md  CONCEPT.md  DATA_MODEL.md  PRIVACY.md  PRIVACY_ja.md
docs/spec/: 01-principles.md  02-concepts.md  03-notation.md  04-data-model.md  05-ui.md  06-samples.md  07-phases.md  08-scalability.md  README.md
public/: privacy.html  release_notes.json
scripts/: auto-record.mjs  bundle-server.mjs  fetch-node.mjs  generate-release-notes.mjs  kill-dev.sh  record-demo.mjs  take-screenshots.mjs
scripts/claude-code-skill/: README.md
src/: app.css  design-guide.stories.tsx  main.tsx  note-app.tsx  scene-tokens.stories.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: graphium-server-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/base/: editor.stories.tsx  editor.tsx  multipage.stories.tsx
src/components/: AiUpgradeNotice.tsx  Breadcrumb.tsx  FileSidebar.tsx  LoginScreen.tsx  MobileHeader.tsx  SourceDocPanel.test.ts  (+5 more)
(+289 files in other folders)
