[package]
name = "graphium"
version = "0.1.0"
description = "Block-based note editor with PROV-DM provenance tracking"
authors = ["kumagallium"]
license = "MIT"
edition = "2021"

[lib]
name = "graphium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
humantime = "2"
base64 = "0.22"
trash = "5"
